--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <!-- SETTINGS BOX -->
+        <!--⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️ SETTINGS BOX ⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️-->
         <!-- <div *ngIf="isSettings" class="settingsBox"> -->
         <div *ngIf="isSettings" class="settingsBox">
 
@@ -49,7 +49,7 @@
                 [value]="cardWidthValue"> -->
 
         </div>
-
+        <!--⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️ END SETTINGS BOX ⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️-->
 
         <!-- <div *ngIf="true" class="settingsBox">
             <div>Table Of Content</div>
