--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,22 +1,25 @@
-<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<button  class="add-column" style=" margin: -20px 29px;" *ngIf="i === selectedIndex"  (click)="selectedIndex = ''" mat-icon-button>
+<button (click)="selectedIndex = ''" class="add-column" style=" margin: -20px 29px;" *ngIf="i === selectedIndex"
+    mat-icon-button>
     <mat-icon style="font-size: 25px;" class="full-icon">cancel</mat-icon>
 </button>
-<button class="add-column" style=" margin: -20px 29px;" *ngIf="i !== selectedIndex" mat-icon-button  (click)="selectedIndex = i">
+<button (click)="selectedIndex = i" class="add-column" style=" margin: -20px 29px;" *ngIf="i !== selectedIndex"
+    mat-icon-button>
     <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
 </button>
-<button class="add-column" style=" margin: -20px 59px;" matTooltip="Add column" matTooltipPosition="above" (click)="insertNewColumn()" mat-icon-button
-    aria-label="ranking">
+<button (click)="insertNewColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="Add column"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
 </button>
-<button class="add-column" style="margin: -20px 89px;" matTooltip="Add column" matTooltipPosition="above" (click)="insertNewColumn()" mat-icon-button
-    aria-label="ranking">
+<button (click)="insertNewColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="Add column"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <mat-icon style="font-size: 26px;" class="full-icon">next_plan</mat-icon>
 </button>
-<button class="add-column" style="margin: -20px 119px;" matTooltip="Add column" matTooltipPosition="above" (click)="insertNewColumn()" mat-icon-button
-    aria-label="ranking">
+<button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 125px;" matTooltip="Add column"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
 </button>
+
+<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
     <div style="text-align: center;">
         <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
@@ -63,32 +66,52 @@
         </button>
     </div>
 </div>
-<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+
+
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑 RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 
 
-<div style="display: flex;flex-direction: row;">
+<div *ngIf="isColumnResizerOn" class="mat-elevation-z2" 
+style="display: flex;flex-direction: row;justify-content: space-evenly;width: 86%;padding: 10px;">
 
-    <p>columns</p>
-    <input type="range" style="margin: 20px;width: 200px;" 
-    (change)="setFontSize(columnsSlider)" [(ngModel)]="columnsSlider"
-    class="slider-font-size" tickInterval="1" min="50" max="1000" [value]="columnsSlider">{{columnsSlider}}
-    <p>ROW HEIGTH</p>
-    <input type="range" style="margin: 20px;width: 200px;" 
-    (change)="setFontSize(rowHeightSlider)" [(ngModel)]="rowHeightSlider"
-    class="slider-font-size" tickInterval="1" min="2" max="10" [value]="rowHeightSlider">{{rowHeightSlider}}
-
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p>columns width:  {{columnsSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(columnsSlider)"
+            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="columnsSlider">
+       
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+    <p>row height: {{rowHeightSlider}} px</p>
+    <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(rowHeightSlider)"
+        [(ngModel)]="rowHeightSlider" class="slider-font-size" tickInterval="1" min="2" max="10"
+        [value]="rowHeightSlider">
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p>row more text height: {{columnsSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(columnsSlider)"
+            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="columnsSlider">
+        
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+    <p>font size: {{rowHeightSlider}} px</p>
+    <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(rowHeightSlider)"
+        [(ngModel)]="rowHeightSlider" class="slider-font-size" tickInterval="1" min="2" max="10"
+        [value]="rowHeightSlider">
+    </div>
 </div>
 <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="columnsSlider"></mat-slider><p>{{columnsSlider}}</p> -->
 
 <div class="odd-style" style="overflow-x: scroll;">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
-        
+
         <div class="test-name-table">
 
-            <div *ngFor="let columnName of columnsNames; let e =  index"
-                style="text-align: center;margin:10px 10px;"[style.width]="columnsSlider +'px'">
+            <div *ngFor="let columnName of columnsNames; let e =  index" style="text-align: center;margin:10px 10px;"
+                [style.width]="columnsSlider +'px'">
 
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
                     (mouseleave)="selectedColumn = ''">
@@ -96,45 +119,45 @@
                     <span *ngIf="selectedColumn === e" class="header-delete-icon" matTooltip="delete column"
                         matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
 
-                     <!-- 🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴 OLD CODE DEPRECATED 🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴 -->
-                       <!--  <input *ngIf="(y == 0) && columnName != 'rationale'"  style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'"  class="header-title-box"
+                    <!-- 🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴 OLD CODE DEPRECATED 🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴🔴 -->
+                    <!--  <input *ngIf="(y == 0) && columnName != 'rationale'"  style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'"  class="header-title-box"
                         [(ngModel)]="testName[columnName]" value="testName[columnName]"> -->
 
 
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
-                        
-                        <textarea style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'"  class="row-box"
-                        *ngIf="(y == 0) " [(ngModel)]="testName[columnName]"
-                        value="testName[columnName]"></textarea>
+
+                    <!-- <textarea style="text-align: center; font-weight: bold;color: #324395;"
+                        [style.width]="columnsSlider +'px'" class="row-box" *ngIf="(y == 0) "
+                        [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea> -->
 
 
-                        <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <!-- <p style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'" 
-                        *ngIf="(y == 0) " >{{testName[columnName]}}</p> -->
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <p style="text-align: center; font-weight: bold;color: #324395;" [style.width]="columnsSlider +'px'" 
+                        *ngIf="(y == 0) " >{{testName[columnName]}}</p>
 
                 </div>
 
                 <!-- <input class="row-box"  style="text-align: center;" [style.width]="columnsSlider +'px'" *ngIf="(y !== 0) && columnName != 'rationale'"
                     [(ngModel)]="testName[columnName]" value="testName[columnName]"> [style.height]="columnsSlider +'px'"-->
-                 
 
-                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 TEXT AREA RENDERER 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
                 <!-- <textarea style="text-align: center;" [style.width]="columnsSlider +'px'"  
                     class="row-box"
                     *ngIf="(y !== 0) " [(ngModel)]="testName[columnName]"
                     [value]="testName[columnName]"></textarea> -->
-               
-                <!-- <mat-form-field style="text-align: center;" > -->
-                    <textarea [style.width]="columnsSlider +'px'" *ngIf="(y !== 0) "  
-                     cdkTextareaAutosize   [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2" 
-                     style="outline: none;text-align: center;"  class="row-box"
-                        [(ngModel)]="testName[columnName]"></textarea>
-                   
-                  <!-- </mat-form-field> -->
 
-                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <!-- <p [style.width]="columnsSlider +'px'" *ngIf="(y !== 0) " style="text-align: center;">{{testName[columnName]}}</p> -->
+                <!-- <mat-form-field style="text-align: center;" > -->
+                <!-- <textarea [style.width]="columnsSlider +'px'" *ngIf="(y !== 0) " cdkTextareaAutosize
+                    [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
+                    style="outline: none;text-align: center;" class="row-box"
+                    [(ngModel)]="testName[columnName]"></textarea> -->
+
+                <!-- </mat-form-field> -->
+
+                <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                <p [style.width]="columnsSlider +'px'" *ngIf="(y !== 0) " style="text-align: center;">{{testName[columnName]}}</p>
 
             </div>
 
