--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -116,7 +116,7 @@
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
                 </div>
-                <app-rating-scale [bmxItem]="bmxItem" [i]='i'></app-rating-scale>
+                <app-rating-scale [bmxItem]="bmxItem" [i]='i' [bmxClientPageOveview]="bmxClientPageOveview"></app-rating-scale>
 
             </div>
             <!-- END STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
@@ -153,7 +153,7 @@
 
         <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
         <div class="page-buttons">
-            <div [ngClass]="displayLeftSideMenu?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
+            <div [ngClass]="bmxClientPageOveview?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
                 <button (click)="changePage('previous')" mat-icon-button>
                     <mat-icon class="full-icon">chevron_left</mat-icon>
                 </button>
@@ -176,7 +176,7 @@
 
 
     <!--RIGHT SIDE MENU -->
-    <div class="project-info" *ngIf="displayLeftSideMenu" style="border: pink solid 1px; width: 25%; height: 100vh;">
+    <div class="project-info" *ngIf="bmxClientPageOveview" style="border: pink solid 1px; width: 25%; height: 100vh;">
 
         <div style="display: flex;flex-direction: column;margin-top: 50px;">
             <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="add header"
