project info fix in progress

--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -122,7 +122,7 @@
                 <label>Director Name</label>
                 <mat-form-field appearance="outline">
                     <mat-label>Director</mat-label>
-                    <mat-select [(ngModel)]="director.Director"  (selectionChange)="fillDirectorInfo(director, i)">
+                    <mat-select [(ngModel)]="director.ngmodel"  (selectionChange)="fillDirectorInfo(director, i)">
                         <mat-option *ngFor="let settingsList of settingsData.DirectorList" [value]="settingsList">
                             {{settingsList.Director}}
                         </mat-option>
