--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -34,7 +34,7 @@
     margin: 10px 10px;
     font-size: 17px;
     font-weight: bold;
-    color: #324395;
+    color: #b0ec0a;
     margin-bottom: 20px;
 }
 
@@ -110,7 +110,7 @@ input[type=range] {
     height: 8.4px;
     cursor: pointer;
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #324395;
+    background: #b0ec0a;
     border-radius: 1.3px;
     border: 0.2px solid #010101;
   }
@@ -126,14 +126,14 @@ input[type=range] {
     margin-top: -5px;
   }
   input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #324395;
+    background: #b0ec0a;
   }
   input[type=range]::-moz-range-track {
     width: 100%;
     height: 8.4px;
     cursor: pointer;
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #324395;
+    background: #b0ec0a;
     border-radius: 1.3px;
     border: 0.2px solid #010101;
   }
@@ -162,7 +162,7 @@ input[type=range] {
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   }
   input[type=range]::-ms-fill-upper {
-    background: #324395;
+    background: #b0ec0a;
     border: 0.2px solid #010101;
     border-radius: 2.6px;
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
@@ -177,8 +177,8 @@ input[type=range] {
     cursor: pointer;
   }
   input[type=range]:focus::-ms-fill-lower {
-    background: #324395;
+    background: #b0ec0a;
   }
   input[type=range]:focus::-ms-fill-upper {
-    background: #324395;
+    background: #b0ec0a;
   }
